--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  image_picker: ^0.8.7+5
+  path_provider: ^2.0.15
+  permission_handler: ^10.4.1
 
 dev_dependencies:
   flutter_test:
