--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,23 +1,22 @@
-name: empty
-description: "A new Flutter project."
+name: camera_app
+description: Una aplicación Flutter con cámara y captura de pantalla
 publish_to: 'none'
-version: 0.1.0
+version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.4
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  camera: ^0.10.0
-  image_picker: ^0.8.7+5
-  path_provider: ^2.0.15
-  permission_handler: ^10.4.1
+  camera: ^0.10.5+5
+  gallery_saver: ^2.3.2
+  permission_handler: ^11.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
