--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,11 @@ dependencies:
   flutter:
     sdk: flutter
   camera: ^0.10.5+5
-  gallery_saver: ^2.3.2
+  gal: ^2.3.0
   permission_handler: ^11.0.1
+  path_provider: ^2.1.2
+  path: ^1.8.3
+  audioplayers: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -20,3 +23,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/audio/
